Refactored Guise CSS style serialization. Implemented Guise reverse conversion from navigation back to depiction URIs.